--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,6 @@
 TODO
 
 1. Add comment functionality
-2.
-3.
-4.
-5.
-6.
+3. Hover bold tab links
+4. Add dates to the posts
+5. Float away the top bar on scroll-down, float back in on scroll-up
